# drg-mods

./: .env.example  .gitignore  Cargo.toml  FSD.code-workspace  FSD.uproject  LICENSE  README.md  kismet.json
Assets/: OC.csv
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultGameplayTags.ini  DefaultInput.ini
Content/: Untitled.umap
Content/Art/Carvers/: SM_Carver_Cube_01.uasset  SM_Carver_DropPodDrill001.uasset  SM_Carver_DropPodDrill002.uasset  SM_Cube_1-1-1.uasset
Content/Character/: BP_PlayerCharacter.uasset
Content/Game/: BP_GameData.uasset  BP_GameInstaNEW.uasset  BP_GameInstance.uasset  BP_GameMode.uasset  BP_NetworkPlayGameMode.uasset  BP_NetworkPlayerController.uasset  BP_PlayerController.uasset  BP_PlayerControllerBase.uasset  BP_PlayerControllerBase_OLD.uasset  GM_EggCollection.uasset  GM_Motherloade.uasset  LIB_Game.uasset
Content/Landscape/: BP_DeepCSGWorld.uasset  NS_Tunnels.uasset  PLS_Base.uasset  PLS_Passes.uasset
Content/Maps/: LVL_Procedural.umap  NewMap.umap  RandomTesting.umap  ReplicationTest.uasset  TestMap.umap  TestMap2.umap  TestOpenHub.umap  TestWidget.uasset
Content/ModHub/: BindingSave.uasset  HubPage_ModManagerAbout.uasset  HubPage_ModManagerDiscord.uasset  HubPage_NoPagesRegistered.uasset  InitCave.uasset  InitSpacerig.uasset  Mod_ModHub.uasset
Content/TestMod/: LIB_TST_A_EditorSpawner.uasset
Content/_ModBPs/: Mod001.uasset  Mod002.uasset  Mod006.uasset  Mod011.uasset  Mod017.uasset  Mod024.uasset  Mod026.uasset  Mod030.uasset  Mod041.uasset
Content/_ModHub/: IHub.uasset
Content/_Tests/: CreateOverclocks.uasset  LIB_SPLICE.uasset  TestGlobalFunctions.uasset
Plugins/BPGen/: BPGen.uplugin
Plugins/Modio/: Modio.uplugin
Plugins/SimpleUGC/: SimpleUGC.uplugin
Scripts/: test.py
Source/: FSDEditor.Target.cs  FSDGame.Target.cs
Source/FSDEngine/: FSDEngine.Build.cs
src/: ar.rs  main.rs  splice.rs  util.rs
(+1206 files in other folders)
