[package]
name = "fsd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.74"
byteorder = "1.4.3"
clap = { version = "4.3.21", features = ["derive"] }
dotenvy = "0.15.7"
fs-err = "2.11.0"
globwalk = "0.8.1"
path-absolutize = "3.1.0"
rayon = "1.7.0"
repak = { git = "https://github.com/trumank/repak.git" }
steamlocate = "2.0.0-alpha.0"
uasset_utils = { git = "https://github.com/trumank/uasset_utils" }
unreal_asset = { git = "https://github.com/trumank/unrealmodding", branch = "patches" }
walkdir = "2.3.3"
zip = "0.6.6"
